# advent-of-code-2022

./: Cargo.toml
src/: lib.rs
src/calendar/day1/: README.md  part1.rs  part2.rs
src/calendar/day2/: README.md  part1.rs  part2.rs
src/calendar/day3/: README.md  part1.rs  part2.rs
src/calendar/day4/: README.md  part1.rs  part2.rs
src/calendar/day5/: README.md  part1.rs  part2.rs
src/calendar/day6/: README.md  part1.rs  part2.rs
src/utils/: parse_input.rs
