[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "d1p1"
path = "src/calendar/day1/part1.rs"

[[bin]]
name = "d1p2"
path = "src/calendar/day1/part2.rs"

[[bin]]
name = "d2p1"
path = "src/calendar/day2/part1.rs"

[[bin]]
name = "d2p2"
path = "src/calendar/day2/part2.rs"
